style.css
nav ul li a {
  color: #484a58;
}

nav {
  position: fixed;
  z-index: 30;
}

div.fade-out {
  -webkit-animation: fadeout .5s; /* Safari, Chrome and Opera > 12.1 */
   -moz-animation: fadeout .5s; /* Firefox < 16 */
    -ms-animation: fadeout .5s; /* Internet Explorer */
     -o-animation: fadeout .5s; /* Opera < 12.1 */
        animation: fadeout .5s;
  opacity: 0;
}

#outer-app-container {
  height: 100%;
  display: flex;
  justify-content: center;
  -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
   -moz-animation: fadein 1s; /* Firefox < 16 */
    -ms-animation: fadein 1s; /* Internet Explorer */
     -o-animation: fadein 1s; /* Opera < 12.1 */
        animation: fadein 1s;
}

.left {
  margin: 0 auto;
}

#nav-mobile {
  display: flex;
  align-items: center;
}

#find-existing {
  margin-right: 10px;
}

#find-existing input {
  border: 1px solid #484a58;
  border-radius: 5px;
  background-color: white;
  height: 35px;
  width: 300px;
  padding-left: 10px;
}

#deploy-btn {
  margin: 0 20px;
}

#inner-app-container {
  margin-top: 160px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100%;
}

#second-nav {
  margin-top: 64px;
}

#add-btn-container {
  display: flex;
  transition: all 1s ease-out;
}

#add-btn {
  transition: all 3s ease-in-out;
}

#logo, #page-title {
  margin-left: 10px;
  color: #484a58;
}

#footer-container {
  position: absolute;
  display: flex;
  width: 100%;
  bottom: 10px;
  justify-content: center;
  align-items: center;
}

#footer-inner {
  display: flex;
  flex-direction: column;
}

#github-a {
  display: flex;
  flex-direction: row;
  justify-content: center;
  color: black !important;
  margin-bottom: 5px;
}


#github-a .fab.fa-2x.fa-github {
  color: black !important;
}

#page-title {
  font-size: 1.3em;
}

#template-container {
  display: none;
}

.address-input {
  display: flex;
  flex-direction: row;
  align-items: center;

  -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
   -moz-animation: fadein 1s; /* Firefox < 16 */
    -ms-animation: fadein 1s; /* Internet Explorer */
     -o-animation: fadein 1s; /* Opera < 12.1 */
        animation: fadein 1s;
}

@keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Firefox < 16 */
@-moz-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Safari, Chrome and Opera > 12.1 */
@-webkit-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Internet Explorer */
@-ms-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Opera < 12.1 */
@-o-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

@keyframes fadeout {
    from { opacity: 1; }
    to   { opacity: 0; }
}

/* Firefox < 16 */
@-moz-keyframes fadeout {
    from { opacity: 1; }
    to   { opacity: 0; }
}

/* Safari, Chrome and Opera > 12.1 */
@-webkit-keyframes fadeout {
    from { opacity: 1; }
    to   { opacity: 0; }
}

/* Internet Explorer */
@-ms-keyframes fadeout {
    from { opacity: 1; }
    to   { opacity: 0; }
}

/* Opera < 12.1 */
@-o-keyframes fadeout {
    from { opacity: 1; }
    to   { opacity: 0; }
}

.input-field {
  flex: 1 0 auto;
  min-width: 300px;
}

.delete-icon {
  flex: 1 0 auto;
  color: #9d9fad;
}

.delete-icon:hover {
  color: red;
  cursor: pointer;
  transform: scale(1.2);
}

.input-field label {
  pointer-events: all !important;
}

#inputs-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

